add new address

--- a/index.html
+++ b/index.html
@@ -1395,7 +1395,7 @@
                     const modalContinueBtn = document.getElementById('modalContinueBtn');
 
                     // Link kado (ganti dengan link Anda)
-                    const GIFT_LINK = "https://athena-consultant.com/"; // GANTI DENGAN LINK KADO ANDA
+                    const GIFT_LINK = "https://main.athena-consultant.com/"; // GANTI DENGAN LINK KADO ANDA
 
                     // Event untuk tombol kado
                     elements.giftBtn.addEventListener('click', function() {
